# pidgin-libbnet

./: .gitignore  AUTHORS  CHANGELOG.md  COMPILE.md  ChangeLog  Makefile  Makefile.am  Makefile.mingw  README.md  SETUP.md  autogen.sh  bnet-sha1.c  bnet-sha1.h  bnet.c  bnet.h  bufferer.c  bufferer.h  configure.ac  configure32  keydecode.c  keydecode.h  packets.c  packets.h  sha1.c  srp.c  srp.h  userdata.c  w3clan.c  w3clan.h
nsi/: libbnet.nsi
src/: Makefile.am  Makefile.mingw  bnet.c  bnet.h  bnet.txt  bufferer.c  bufferer.h  keydecode.c  keydecode.h  resource.rc  sha1.c  sha1.h  srp.c  userdata.h  w3clan.c  w3clan.h
